--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -107,6 +107,13 @@
         <item quantity="other">%d položiek</item>
     </plurals>
 
+    <!-- Are you sure you want to delete 5 items? -->
+    <plurals name="delete_items">
+        <item quantity="one">%d položku</item>
+        <item quantity="few">%d položky</item>
+        <item quantity="other">%d položiek</item>
+    </plurals>
+
     <!-- Storages -->
     <string name="select_storage">Zvoľte úložisko</string>
     <string name="internal">Interné</string>
@@ -199,6 +206,9 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
+    <string name="deletion_confirmation">Ste si istý, že chcete vymazať %s?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">Ste si istý, že chcete vyhodiť %s do koša?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="do_not_ask_again">Nepýtať sa už v tomto spustení</string>
     <string name="yes">Áno</string>
     <string name="no">Nie</string>
 
@@ -360,12 +370,17 @@
     <string name="use_same_snooze">Použiť stále rovnaký čas s Odložiť</string>
     <string name="snooze_time">Čas odloženia</string>
     <string name="vibrate_on_button_press">Vibrovať pri stlačení tlačidiel</string>
+    <string name="move_items_to_trash_bin">Presunúť položky miesto vymazania do odpadkového koša</string>
+    <string name="recycle_bin_cleaning_interval">Interval vysypávania koša</string>
+    <string name="empty_recycle_bin">Vysypať odpadkový kôď</string>
+    <string name="recycle_bin_location">Umiestnenie odpadkového koša</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
     <string name="security">Bezpečnosť</string>
     <string name="scrolling">Skrolovanie</string>
     <string name="file_operations">Súborové operácie</string>
+    <string name="recycle_bin">Odpadkový kôš</string>
 
     <!-- Import / Export -->
     <string name="importing">Importovanie…</string>
@@ -471,6 +486,8 @@
     <string name="faq_3_text_commons">Žiaľ, nie. Súbory sú mazané okamžite po potvrdení, nie je dostupný žiadny smetný kôš.</string>
     <string name="faq_4_title_commons">Nepáčia sa mi farby widgetu, viem ich zmeniť?</string>
     <string name="faq_4_text_commons">Áno, po potiahnutí widgetu na plochu sa zobrazí konfiguračná obrazovka. Kliknutím na farebné štvorčeky v ľavom dolnom rohu viete zvoliť nové. Potiahnutím posuvníka viete upraviť aj priehľadnosť.</string>
+    <string name="faq_5_title_commons">Viem nejakým spôsobom obnoviť vymazané súbory?</string>
+    <string name="faq_5_text_commons">Ak dané súbory boli skutočne vymazané, tak nie. V nastaveniach aplikácie ale viete nastaviť používanie odpadkového koša miesto vymazávania súborov. Taktiež viete nastaviť umiestnenie koša, interval vysypávania, resp. ho vysypať manuálne.</string>
 
     <!-- License -->
     <string name="notice">Táto aplikácia používa na uľahčenie práce nasledovné knižnice tretích strán. Ďakujeme.</string>
