adding a new "No sound" item at the alarmsound picker

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -328,6 +328,7 @@
     <string name="system_sounds">Sons del sistema</string>
     <string name="your_sounds">Els teus sons</string>
     <string name="add_new_sound">Afegeix un so nou</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
