--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Systemtöne</string>
     <string name="your_sounds">Deine Töne</string>
     <string name="add_new_sound">Neuen Ton hinzufügen</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
