--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Systeemgeluiden</string>
     <string name="your_sounds">Eigen geluiden</string>
     <string name="add_new_sound">Nieuw geluid toevoegen</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Instellingen</string>
