--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -345,6 +345,7 @@
     <string name="system_sounds">Systémové zvuky</string>
     <string name="your_sounds">Vaše zvuky</string>
     <string name="add_new_sound">Pridať nový zvuk</string>
+    <string name="no_sound">Žiadny zvuk</string>
 
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
