--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Systemljud</string>
     <string name="your_sounds">Dina ljud</string>
     <string name="add_new_sound">Lägg till ett nytt ljud</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
