--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -325,6 +325,7 @@
     <string name="system_sounds">系統音效</string>
     <string name="your_sounds">你的音效</string>
     <string name="add_new_sound">添加新的音效</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
