--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Systemlyde</string>
     <string name="your_sounds">Dine lyde</string>
     <string name="add_new_sound">Tilføj en ny lyd</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
