--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -325,6 +325,7 @@
     <string name="system_sounds">Sonidos del sistema</string>
     <string name="your_sounds">Tus sonidos</string>
     <string name="add_new_sound">Agrega un nuevo sonido</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Ajustes</string>
