--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Sonneries du système</string>
     <string name="your_sounds">Vos sonneries</string>
     <string name="add_new_sound">Ajouter une nouvelle sonnerie</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Paramètres</string>
