--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">System sounds</string>
     <string name="your_sounds">Your sounds</string>
     <string name="add_new_sound">Add a new sound</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
