--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Systemlyder</string>
     <string name="your_sounds">Dine lyder</string>
     <string name="add_new_sound">Legg til en ny lyd</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Innstillinger</string>
