--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">Sons do sistema</string>
     <string name="your_sounds">Meus sons</string>
     <string name="add_new_sound">Adicionar um novo som</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Definições</string>
