--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -326,6 +326,7 @@
     <string name="system_sounds">系统铃声</string>
     <string name="your_sounds">你的铃声</string>
     <string name="add_new_sound">添加新的铃声</string>
+    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">设置</string>
