updating the german Filter strings

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -21,9 +21,9 @@
     <string name="type_2_characters">Du musst mindestens 2 Zeichen eingeben, um die Suche zu starten.</string>
 
     <!-- Filters -->
-    <string name="filter">Sortieren</string>
+    <string name="filter">Filter</string>
     <string name="no_items_found">Keine Elemente gefunden.</string>
-    <string name="change_filter">Sortierung ändern</string>
+    <string name="change_filter">Filter ändern</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Speicher-Berechtigung wird benötigt</string>
