--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -375,6 +375,7 @@
     <string name="recycle_bin_cleaning_interval">Interval vysypávania koša</string>
     <string name="empty_recycle_bin">Vysypať odpadkový kôď</string>
     <string name="recycle_bin_location">Umiestnenie odpadkového koša</string>
+    <string name="force_portrait_mode">Stále použiť režim na výšku</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
