--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -355,6 +355,7 @@
     <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
     <string name="empty_recycle_bin">空白回收桶</string>
     <string name="recycle_bin_location">回收桶位置</string>
+    <string name="force_portrait_mode">Force portrait mode</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
