adding a new string about deleting a folder

--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">사용 안함</string>
     <string name="details">Details</string>
     <string name="notes">Notes</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">검색</string>
