--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Nigdy</string>
     <string name="details">Szczegóły</string>
     <string name="notes">Notatnik</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Szukaj</string>
