--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Nunca</string>
     <string name="details">Detalhes</string>
     <string name="notes">Notas</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Pesquisar</string>
