--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Никогда</string>
     <string name="details">Подробности</string>
     <string name="notes">Заметки</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Поиск</string>
