--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Nikdy</string>
     <string name="details">Detaily</string>
     <string name="notes">Poznámky</string>
+    <string name="deleting_folder">Odstraňuje sa priečinok \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Hľadať</string>
