--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Aldrig</string>
     <string name="details">Information</string>
     <string name="notes">Anteckningar</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Sök</string>
