--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">從不</string>
     <string name="details">詳細資訊</string>
     <string name="notes">筆記</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">搜尋</string>
