--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Heç vaxt</string>
     <string name="details">Detallar</string>
     <string name="notes">Qeydlər</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Axtar</string>
