--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Aldrig</string>
     <string name="details">Detaljer</string>
     <string name="notes">Noter</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Søg</string>
