--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Nie</string>
     <string name="details">Details</string>
     <string name="notes">Notizen</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Suchen</string>
