--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Ei koskaan</string>
     <string name="details">Yksityiskohdat</string>
     <string name="notes">Muistiinpanot</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Haku</string>
