--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Mai</string>
     <string name="details">Dettagli</string>
     <string name="notes">Note</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Cerca</string>
