--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Never</string>
     <string name="details">Details</string>
     <string name="notes">メモ</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">検索</string>
