--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Niekada</string>
     <string name="details">Detalės</string>
     <string name="notes">Užrašai</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Ieškoti</string>
