--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">Aldri</string>
     <string name="details">Details</string>
     <string name="notes">Notes</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Søk</string>
