--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -15,6 +15,7 @@
     <string name="never">从不</string>
     <string name="details">详细</string>
     <string name="notes">笔记</string>
+    <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Search -->
     <string name="search">搜索</string>
