--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -479,6 +479,7 @@
 
     <!-- FAQ -->
     <string name="frequently_asked_questions">Často kladené otázky</string>
+    <string name="before_asking_question">Predtým, ako sa niečo opýtate si prosíme preštudujte</string>
     <string name="faq_1_title_commons">Prečo nevidím widget tejto apky na zozname widgetov?</string>
     <string name="faq_1_text_commons">Je to pravdepodobne spôsobené tým, že ste apku presunuli na SD kartu. Ide o systémové obmedzenie, ktoré v tomto prípade skryje widget apky.
         Jediným riešením je presunutie apky späť na internú pamäť cez nastavnenia zariadenia.</string>
